--- a/nginx-languagetool/languagetool.conf
+++ b/nginx-languagetool/languagetool.conf
@@ -1,1 +1,26 @@
-../shared-files/languagetool.conf
+server {
+    listen 80;
+    return 301 https://;
+}
+server {
+    listen 443;
+    server_name ;
+    ssl_certificate           /languagetool/certs/cert.crt;
+    ssl_certificate_key       /languagetool/certs/cert.key;
+    ssl on;
+    ssl_session_cache  builtin:1000  shared:SSL:10m;
+    ssl_protocols TLSv1.3;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    ssl_prefer_server_ciphers off;
+    error_log /languagetool/error.log warn;
+    location / {
+      proxy_set_header        Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+      proxy_pass          http://localhost:8080;
+      proxy_read_timeout  90;
+      proxy_redirect      http://localhost:8080 https://;
+    }
+}
