--- a/nginx-languagetool/languagetool.service
+++ b/nginx-languagetool/languagetool.service
@@ -1,1 +1,9 @@
-../shared-files/languagetool.service
+[Unit] 
+Description=Language Tool Server Service 
+[Service] 
+Restart=always 
+ExecStart=java -cp /opt/languagetool/languagetool-standalone/target/LanguageTool-/LanguageTool-/languagetool-server.jar org.languagetool.server.HTTPServer --languageModel /languagetool/ngram --port 8080 --allow-origin "*" 
+Type=simple 
+User=languagetool 
+[Install] 
+WantedBy=default.target
