--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Buildah Action
+      id: build-image
       uses: redhat-actions/buildah-build@v2
       with:
         image: languagetool
