--- a/standalone-languagetool/Containerfile
+++ b/standalone-languagetool/Containerfile
@@ -4,7 +4,9 @@ ENV LT_VER=5.5
 RUN microdnf -y install git maven unzip nginx java-1.8.0-openjdk-headless; microdnf clean all; 
 RUN git clone --depth 1 https://github.com/languagetool-org/languagetool.git -b v${LT_VER} /opt/languagetool/
 WORKDIR /opt/languagetool/
-RUN ./build.sh languagetool-standalone package -DskipTests
+#RUN ./build.sh languagetool-standalone package -DskipTests
+# Don't use the shell script, just run the maven command with quiet to silence the wall of text
+RUN mvn -q --projects languagetool-standalone --also-make package -DskipTests
 RUN useradd languagetool
 USER languagetool
 EXPOSE 8080/tcp
