Add simple startup script, change tag to languagetool version, add latest tag

--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: redhat-actions/buildah-build@v2
       with:
         image: languagetool
-        tags: v1 ${{ github.sha }}
+        tags: latest v5.5 ${{ github.sha }}
         containerfiles: |
           ./Containerfile
         build-args: |
