--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -1,6 +1,8 @@
 name: Build Image using Containerfile
-on: [push]
-
+on:
+  push:
+    paths:
+      - 'Containerfile'
 
 jobs:
   build:
@@ -28,7 +30,7 @@ jobs:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
         registry: docker.io/giratot
-        username: ${{ secrets.REGISTRY_USER }}
+        username: giratot
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
 
