--- a/.github/workflows/scan-container.yaml
+++ b/.github/workflows/scan-container.yaml
@@ -3,9 +3,14 @@ on:
   schedule:
     - cron:  '0 15 * * *'
 
-- name: Container image scan
-- uses: Azure/container-scan@v0.1
-  with:
-    image-name: docker.io/giratot/languagetool:latest
-    username: giratot
-    password: ${{ secrets.REGISTRY_PASSWORD }}
+jobs:
+  build-secure-and-push:
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Container image scan
+      uses: Azure/container-scan@v0.1
+      with:
+        image-name: docker.io/giratot/languagetool:latest
+        username: giratot
+        password: ${{ secrets.REGISTRY_PASSWORD }}
