--- a/.github/workflows/scan-container.yaml
+++ b/.github/workflows/scan-container.yaml
@@ -2,6 +2,7 @@ name: Scan container for weaknesses
 on:
   schedule:
     - cron:  '0 15 * * *'
+  workflow_dispatch:
 
 jobs:
   build-secure-and-push:
