--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -25,7 +25,7 @@ jobs:
         containerfiles: |
           ./Containerfile-dev
         build-args: |
-          some_arg=some_value
+          DOCKER_CONTENT_TRUST=1
 
     - name: Push To hub.docker.com
       id: push-to-docker
