--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -14,6 +14,22 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Get LanguageTool Version
+      run: |
+          data=$(curl -s https://api.github.com/repos/languagetool-org/languagetool/tags)
+          regex='\"name\": \"([0-9v.]{1,6})\"'
+
+          if [[ $data =~ $regex ]]
+          then
+              echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]}"
+          fi
+      shell: bash
+      id: get-version
+
+    - name: Print LT Version
+      run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
+
+
     - name: Buildah Action
       id: build-image
       uses: redhat-actions/buildah-build@v2
@@ -21,10 +37,11 @@ jobs:
         DOCKER_CONTENT_TRUST: 1
       with:
         image: languagetool
-        tags: dev lt-v5.5 ${{ github.sha }}
+        tags: dev lt-${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile-dev
         build-args: |
+          LT_VER=${{ steps.get-version.outputs.LT_VERSION }}
           DOCKER_CONTENT_TRUST=1
 
     - name: Push To hub.docker.com
