--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -21,7 +21,7 @@ jobs:
 
           if [[ $data =~ $regex ]]
           then
-              echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]}"
+              echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]:1}"
           fi
       shell: bash
       id: get-version
