Check Limit of File Usages

--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -14,6 +14,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Check File Limits
+      run: |
+        ulimit -n 
+        ulimit -n 65536
+
     - name: Get LanguageTool Version
       run: |
           data=$(curl -s https://api.github.com/repos/languagetool-org/languagetool/tags)
