Add schedule, fix tags, add master scan

--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -42,7 +42,7 @@ jobs:
         DOCKER_CONTENT_TRUST: 1
       with:
         image: languagetool
-        tags: dev lt-${{ steps.get-version.outputs.LT_VERSION }}
+        tags: dev dev-${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile-dev
         build-args: |
