--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -42,7 +42,7 @@ jobs:
         DOCKER_CONTENT_TRUST: 1
       with:
         image: languagetool
-        tags: latest lt-${{ steps.get-version.outputs.LT_VERSION }}
+        tags: latest ${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile
         build-args: |
