--- a/.github/workflows/build-container-standalone-master.yaml
+++ b/.github/workflows/build-container-standalone-master.yaml
@@ -1,5 +1,7 @@
 name: LIVE-MASTER - Build Image using Containerfile
 on:
+  schedule:
+    - cron:  '0 0 * * *'
   push:
     paths:
       - 'Containerfile-master'
