--- a/.github/workflows/trivy-container-scan.yaml
+++ b/.github/workflows/trivy-container-scan.yaml
@@ -11,6 +11,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
