--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -56,7 +56,7 @@ jobs:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
         registry: docker.io/giratot
-        username: giratot
+        username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
 
