--- a/.github/workflows/scan-container-master.yaml
+++ b/.github/workflows/scan-container-master.yaml
@@ -11,5 +11,5 @@ jobs:
       uses: Azure/container-scan@v0.1
       with:
         image-name: docker.io/giratot/languagetool:live
-        username: giratot
+        username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
