--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -5,7 +5,8 @@ on:
       - 'Containerfile'
       - 'startup.sh'
   workflow_dispatch:
-
+  schedule:
+    - cron:  '0 10 * * *'
 jobs:
   build:
     name: Build image
