--- a/.github/workflows/build-container-standalone.yaml
+++ b/.github/workflows/build-container-standalone.yaml
@@ -35,7 +35,6 @@ jobs:
     - name: Print LT Version
       run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
 
-
     - name: Buildah Action
       id: build-image
       uses: redhat-actions/buildah-build@v2
@@ -43,7 +42,7 @@ jobs:
         DOCKER_CONTENT_TRUST: 1
       with:
         image: languagetool
-        tags: latest ${{ steps.get-version.outputs.LT_VERSION }}
+        tags: ${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile
         build-args: |
@@ -59,7 +58,6 @@ jobs:
         registry: docker.io/giratot
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
-
 
     - name: Print image url
       run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
