--- a/.github/workflows/scan-container.yaml
+++ b/.github/workflows/scan-container.yaml
@@ -7,9 +7,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - name: Get LanguageTool Version
+      run: |
+          data=$(curl -s https://api.github.com/repos/languagetool-org/languagetool/tags)
+          regex='\"name\": \"([0-9v.]{1,6})\"'
+
+          if [[ $data =~ $regex ]]
+          then
+              echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]:1}"
+          fi
+      shell: bash
+      id: get-version
+
+    - name: Print LT Version
+      run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
+
     - name: Container image scan
       uses: Azure/container-scan@v0.1
       with:
-        image-name: docker.io/giratot/languagetool:latest
+        image-name: docker.io/giratot/languagetool:${{ steps.get-version.outputs.LT_VERSION }}
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
