--- a/.github/workflows/trivy-container-scan.yaml
+++ b/.github/workflows/trivy-container-scan.yaml
@@ -15,10 +15,25 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Get LanguageTool Version
+        run: |
+            data=$(curl -s https://api.github.com/repos/languagetool-org/languagetool/tags)
+            regex='\"name\": \"([0-9v.]{1,6})\"'
+
+            if [[ $data =~ $regex ]]
+            then
+                echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]:1}"
+            fi
+        shell: bash
+        id: get-version
+
+      - name: Print LT Version
+        run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/giratot/languagetool:latest'
+          image-ref: 'docker.io/giratot/languagetool:${{ steps.get-version.outputs.LT_VERSION }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
         env:
