--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -1,6 +1,5 @@
 name: DEV - Build Image using Containerfile
 on:
-on:
   push:
     branches:
       - 'dev'
@@ -19,22 +18,6 @@ jobs:
         ulimit -n 
         ulimit -n 65536
 
-    - name: Get LanguageTool Version
-      run: |
-          data=$(curl -s https://api.github.com/repos/languagetool-org/languagetool/tags)
-          regex='\"name\": \"([0-9v.]{1,6})\"'
-
-          if [[ $data =~ $regex ]]
-          then
-              echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]:1}"
-          fi
-      shell: bash
-      id: get-version
-
-    - name: Print LT Version
-      run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
-
-
     - name: Buildah Action
       id: build-image
       uses: redhat-actions/buildah-build@v2
@@ -42,11 +25,10 @@ jobs:
         DOCKER_CONTENT_TRUST: 1
       with:
         image: languagetool
-        tags: dev dev-${{ steps.get-version.outputs.LT_VERSION }}
+        tags: dev
         containerfiles: |
-          ./Containerfile-dev
+          ./Containerfile
         build-args: |
-          LT_VER=${{ steps.get-version.outputs.LT_VERSION }}
           DOCKER_CONTENT_TRUST=1
 
     - name: Push To hub.docker.com
