--- a/.github/workflows/build-container-standalone-main.yaml
+++ b/.github/workflows/build-container-standalone-main.yaml
@@ -21,7 +21,7 @@ jobs:
         image: languagetool
         tags: live
         containerfiles: |
-          ./Containerfile-master
+          ./Containerfile
 
     - name: Push To hub.docker.com
       id: push-to-docker
