--- a/.github/workflows/build-container-standalone-nightly.yaml
+++ b/.github/workflows/build-container-standalone-nightly.yaml
@@ -1,4 +1,4 @@
-name: LIVE - Build Image using Containerfile
+name: NIGHTLY - Build Image using Containerfile
 on:
   schedule:
     - cron:  '0 0 * * *'
@@ -21,20 +21,12 @@ jobs:
         ulimit -n 65536
 
     - name: Get LanguageTool Version
-      run: |
-          data=$(curl -s https://api.github.com/repos/languagetool-org/languagetool/tags)
-          regex='\"name\": \"([0-9v.]{1,6})\"'
-
-          if [[ $data =~ $regex ]]
-          then
-              echo "::set-output name=LT_VERSION::${BASH_REMATCH[1]:1}"
-          fi
+      run: ./get_latest_lt.sh
       shell: bash
       id: get-version
 
     - name: Print LT Version
       run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
-
 
     - name: Buildah Action
       id: build-image
@@ -48,6 +40,11 @@ jobs:
         build-args: |
           LT_VER=${{ steps.get-version.outputs.LT_VERSION }}
 
+    - name: Get LanguageTool Version
+      run: ./healthcheck.sh
+      shell: bash
+      id: get-version
+
     - name: Push To hub.docker.com
       id: push-to-docker
       uses: redhat-actions/push-to-registry@v2
@@ -57,7 +54,6 @@ jobs:
         registry: docker.io/giratot
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
-
 
     - name: Print image url
       run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
