Try fix healthcheck

--- a/.github/workflows/build-container-standalone-nightly.yaml
+++ b/.github/workflows/build-container-standalone-nightly.yaml
@@ -40,8 +40,8 @@ jobs:
         build-args: |
           LT_VER=${{ steps.get-version.outputs.LT_VERSION }}
 
-    - name: Get LanguageTool Version
-      run: bash -x ./healthcheck.sh
+    - name: Run Healthcheck
+      run: bash -x ./healthcheck.sh ${{ steps.build-image.outputs.image }}
       shell: bash
 
     - name: Push To hub.docker.com
