Add healthcheck to all workflows

--- a/.github/workflows/build-container-standalone-main.yaml
+++ b/.github/workflows/build-container-standalone-main.yaml
@@ -23,6 +23,10 @@ jobs:
         containerfiles: |
           ./Containerfile
 
+    - name: Run Healthcheck
+      run: bash -x ./healthcheck.sh ${{ steps.build-image.outputs.image }}
+      shell: bash
+
     - name: Push To hub.docker.com
       id: push-to-docker
       uses: redhat-actions/push-to-registry@v2
