--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -15,15 +15,23 @@ jobs:
 
     - name: Check File Limits
       run: |
-        ulimit -n 
+        ulimit -n
         ulimit -n 65536
+
+    - name: Get LanguageTool Version
+      run: bash ./get_current_lt.sh
+      shell: bash
+      id: get-version
+
+    - name: Print LT Version
+      run: echo "LT Version is ${{ steps.get-version.outputs.LT_VERSION }}"
 
     - name: Buildah Action
       id: build-image
       uses: redhat-actions/buildah-build@v2
       with:
         image: languagetool
-        tags: dev
+        tags: dev dev-${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile
 
@@ -43,18 +51,3 @@ jobs:
 
     - name: Print image url
       run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
-    
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@0.19.0
-      with:
-        image-ref: 'docker.io/giratot/languagetool:dev'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-      env:
-        TRIVY_USERNAME: ${{ secrets.REGISTRY_USER }}
-        TRIVY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
-
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: 'trivy-results.sarif'
