--- a/.github/workflows/build-container-standalone-main.yaml
+++ b/.github/workflows/build-container-standalone-main.yaml
@@ -13,18 +13,22 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Get LanguageTool Version
+      run: bash ./get_current_lt.sh
+      shell: bash
+      id: get-version
+
     - name: Buildah Action
       id: build-image
       uses: redhat-actions/buildah-build@v2
-
       with:
         image: languagetool
-        tags: live
+        tags: main ${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile
 
     - name: Run Healthcheck
-      run: bash -x ./healthcheck.sh ${{ steps.build-image.outputs.image }}
+      run: bash ./healthcheck.sh ${{ steps.build-image.outputs.image }}
       shell: bash
 
     - name: Push To hub.docker.com
@@ -37,7 +41,20 @@ jobs:
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
-
     - name: Print image url
       run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
 
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.19.0
+      with:
+        image-ref: 'docker.io/giratot/languagetool:dev'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+      env:
+        TRIVY_USERNAME: ${{ secrets.REGISTRY_USER }}
+        TRIVY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: 'trivy-results.sarif'
