--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -49,5 +49,12 @@ jobs:
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
+    - name: Generate artifact attestation
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-name: ${{ steps.build-image.outputs.image }}
+        subject-digest: ${{ steps.push-to-docker.outputs.digest }}
+        push-to-registry: true
+
     - name: Print image url
       run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
