--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -5,6 +5,11 @@ on:
       - 'dev'
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+
 jobs:
   build:
     name: Build image
