Push to github registry

--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -6,11 +6,12 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_REPO: index.docker.io/giratot
+  CONTAINER_REPO: ghcr.io/${{ github.repository }}
 
 permissions:
   id-token: write
   contents: read
+  packages: write
   attestations: write
 
 jobs:
@@ -47,21 +48,21 @@ jobs:
       run: bash -x ./healthcheck.sh ${{ steps.build-image.outputs.image }}
       shell: bash
 
-    - name: Push To hub.docker.com
-      id: push-to-docker
+    - name: Push To Repo
+      id: push-to-repo
       uses: redhat-actions/push-to-registry@v2
       with:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
-        registry: ${{ env.DOCKER_REPO }}
-        username: ${{ secrets.REGISTRY_USER }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        registry: ${{ env.CONTAINER_REPO }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Generate artifact attestation
       uses: actions/attest-build-provenance@v1
       with:
-        subject-name: ${{ env.DOCKER_REPO }}/${{ steps.build-image.outputs.image }}
-        subject-digest: ${{ steps.push-to-docker.outputs.digest }}
+        subject-name: ${{ env.CONTAINER_REPO }}/${{ steps.build-image.outputs.image }}
+        subject-digest: ${{ steps.push-to-repo.outputs.digest }}
         push-to-registry: true
 
     - name: Print image url
