--- a/.github/workflows/build-container-standalone-dev.yaml
+++ b/.github/workflows/build-container-standalone-dev.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  CONTAINER_REPO: ${{ env.REGISTRY }}/${{ github.repository }}
+  CONTAINER_REPO: ${{ github.repository }}
 
 permissions:
   id-token: write
@@ -63,11 +63,11 @@ jobs:
       with:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
-        registry: ${{ env.CONTAINER_REPO }}
+        registry: ${{ env.REGISTRY }}/${{ env.CONTAINER_REPO }}
 
     - name: Generate artifact attestation and push
       uses: actions/attest-build-provenance@v1
       with:
-        subject-name: ${{ env.CONTAINER_REPO }}/${{ steps.build-image.outputs.image }}
+        subject-name: ${{ env.REGISTRY }}/${{ env.CONTAINER_REPO }}/${{ steps.build-image.outputs.image }}
         subject-digest: ${{ steps.push-to-repo.outputs.digest }}
         push-to-registry: true
