--- a/.github/workflows/build-container-standalone-main.yaml
+++ b/.github/workflows/build-container-standalone-main.yaml
@@ -1,4 +1,4 @@
-name: MAIN - Build Image using Containerfile
+name: PROD - Build Image using Containerfile
 on:
   push:
     branches:
@@ -6,11 +6,13 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_REPO: index.docker.io/giratot
+  REGISTRY: ghcr.io
+  CONTAINER_REPO: ${{ github.repository }}
 
 permissions:
   id-token: write
   contents: read
+  packages: write
   attestations: write
 
 jobs:
@@ -31,7 +33,7 @@ jobs:
       uses: redhat-actions/buildah-build@v2
       with:
         image: languagetool
-        tags: main v${{ steps.get-version.outputs.LT_VERSION }}
+        tags: prod v${{ steps.get-version.outputs.LT_VERSION }}
         containerfiles: |
           ./Containerfile
 
@@ -39,30 +41,32 @@ jobs:
       run: bash ./healthcheck.sh ${{ steps.build-image.outputs.image }}
       shell: bash
 
-    - name: Push To hub.docker.com
-      id: push-to-docker
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push To GitHub Container Registry
+      id: push-to-repo
       uses: redhat-actions/push-to-registry@v2
       with:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
-        registry: ${{ env.DOCKER_REPO }}
-        username: ${{ secrets.REGISTRY_USER }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        registry: ${{ env.REGISTRY }}/${{ env.CONTAINER_REPO }}
 
     - name: Generate artifact attestation
       uses: actions/attest-build-provenance@v1
       with:
-        subject-name: ${{ env.DOCKER_REPO }}/${{ steps.build-image.outputs.image }}
-        subject-digest: ${{ steps.push-to-docker.outputs.digest }}
+        subject-name: ${{ env.REGISTRY }}/${{ env.CONTAINER_REPO }}/${{ steps.build-image.outputs.image }}
+        subject-digest: ${{ steps.push-to-repo.outputs.digest }}
         push-to-registry: true
-
-    - name: Print image url
-      run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.19.0
       with:
-        image-ref: '${{ env.DOCKER_REPO }}/${{ steps.build-image.outputs.image }}:dev'
+        image-ref: '${{ env.REGISTRY }}/${{ env.CONTAINER_REPO }}/${{ steps.build-image.outputs.image }}:dev'
         format: 'sarif'
         output: 'trivy-results.sarif'
       env:
